--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "vite",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "client": "vite",
+    "server": "nodemon server/index.js",
+    "preview": "concurrently \"npm run server\" \"vite preview\""
   },
   "devDependencies": {
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "express": "4.18.2",
+    "jsynchronous": "0.9.3",
+    "socket.io": "4.7.4",
+    "socket.io-client": "4.7.4"
   },
   "dependencies": {
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "nodemon": "3.0.3",
+    "concurrently": "8.2.2"
   }
 }
