--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "vite build",
-    "client": "vite",
+    "client": "vite --force",
     "server": "nodemon server/index.js",
     "preview": "concurrently \"npm run server\" \"vite preview\""
   },
   "devDependencies": {
-    "vite": "^5.1.0",
     "express": "4.18.2",
-    "jsynchronous": "0.9.3",
+    "jsynchronous": "0.9.5",
     "socket.io": "4.7.4",
-    "socket.io-client": "4.7.4"
+    "socket.io-client": "4.7.4",
+    "vite": "^5.1.0"
   },
   "dependencies": {
-    "three": "^0.161.0",
+    "compression": "^1.7.4",
+    "concurrently": "8.2.2",
     "nodemon": "3.0.3",
-    "concurrently": "8.2.2"
+    "three": "^0.161.0"
   }
 }
